# CoreAI3D

./: .gitignore  .gitmodules  .rsync-exludes.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  CoreAI3D.sln  CoreAI3D_Root.sln  Dockerfile  MODULE.bazel  README.md  README_BUILD.md  SECURITY.md  TODO  VCPKG_ROOT  auto_fork_repos.sh  build.sh  cloud_speech.proto  config.json  data.sql  diagnostic_test.cpp  docker-compose.yml  fix-cstdint.patch  huggingface_dataset_manager.py  launch.json  launch.vs.json  my.cnf  package.json  pnpm-lock.yaml  post_build_automation.py  predictions.csv  shortpath.ps1  test_data.csv  test_websocket.js  tree.txt  update.ps1  vcpkg-configuration.json  (+2 more)
CoreAI3D/: CMakeLists.txt  Pch.h  cloud_speech.pb.cc  cloud_speech.pb.h  embedding.txt  main.cpp  main.hpp  post_build_automation.py
CoreAI3D/CoreAI3D/: CMakeLists.txt
CoreAI3D/CoreAI3D.dir/Debug/: CoreAI3D.exe.recipe
CoreAI3D/CoreAI3D.dir/Debug/CoreAI3D.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CoreAI3D.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CoreAI3D/CoreAI3D/include/: Core.hpp  MathModule.hpp  VisionModule.hpp  WebModule.hpp  WebSocketServer.hpp
CoreAI3D/CoreAI3D/src/: APIServer.cpp  AudioModule.cpp  Gemini.cpp  MathModule.cpp  ModuleOrchestrator.cpp  SystemModule.cpp  Train.cpp  WebModule.cpp  WebSocketServer.cpp
CoreAI3D/include/: APIServer.hpp  AudioModule.hpp  Core.hpp  CoreAI3DCommon.hpp  Database.hpp  Gemini.hpp  Language.hpp  LinuxModule.hpp  MathModule.hpp  ModuleOrchestrator.hpp  SystemModule.hpp  Train.hpp  VisionModule.hpp  WebModule.hpp  WebSocketServer.hpp
CoreAI3D/proto_objs.dir/Debug/: proto_objs.lib.recipe
CoreAI3D/proto_objs.dir/Debug/proto_objs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  proto_objs.lastbuildstate
CoreAI3D/src/: APIServer.cpp  AudioModule.cpp  Core.cpp  Database.cpp  Language.cpp  LinuxModule.cpp  MathModule.cpp  ModuleOrchestrator.cpp  Train.cpp  VisionModule.cpp  WebModule.cpp  WebSocketServer.cpp
CoreAI3D/x64/Debug/copy_protobuf_includes/copy_pro.D244F1D6.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  copy_protobuf_includes.lastbuildstate
PackageManager/Properties/: launchSettings.json
docker/sandbox/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.kali  Dockerfile.opensuse  Dockerfile.ubuntu  Dockerfile.windows  README.md  build_and_release.sh  pyenv_init.sh  supervisord.conf
docker/training/: Dockerfile.trainer  train_linux_operations.py
linux_gui/: automation_helper.py  coreai3d_client.py  dashboard.py  example_usage.py  generate_api_key.py  requirements.txt  run_dashboard.bat  run_dashboard.sh
linux_gui/training_data/Hacking and Cybersecurity/: metadata.json
python/: README.md  coreai3d_client.py  huggingface_dataset_manager.py  python_automation_examples.py  train_huggingface_datasets.py
tests/: CMakeLists.txt  CTestTestfile.cmake  CoreAI3DTests.sln  CoreAI3D_Catch2Tests-b12d07c_include.cmake  CoreAI3D_GTest[1]_include.cmake  CoreTests.cpp  DartConfiguration.tcl  DatabaseTests.cpp  TrainTests.cpp  simple_test  simple_test.cpp  test_training.cpp
tests/CoreAI3D_Catch2Tests.dir/Debug/CoreAI3D.F47F7C8B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CoreAI3D_Catch2Tests.lastbuildstate  CustomBuild.read.1.tlog
tests/CoreAI3D_GTest.dir/Debug/CoreAI3D_GTest.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
utils/: embedings.py
web/: README.md  api-client.js  automation-examples.js  enhanced-interface.jsx  gui.jsx
windows_gui/: README.md  dashboard.py  requirements.txt  run_dashboard.py
